--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -34,6 +34,19 @@ html {
   background-color: #FAC898;
 }
 
+div.addvid {
+  margin-top: 6em;
+  margin-left: 30em;
+  padding-top: 12em;
+  padding-bottom: 5em;
+  padding-left: 16em;
+  padding-right: 16em;
+  background-color: #242526;
+  border-radius: 25px;
+  width: 200px;
+  height: 150px;
+}
+
 button.addvid {
   display: inline-block;
   background-color: #FFA500;
