--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -17,6 +17,31 @@ body {
 a {
   color: #00B7FF;
 }
+
+main {
+  display: grid;
+  grid-template-columns: minmax(200px, 2fr) 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+#video {
+  grid-column: 1;
+  grid-row: 1/2
+}
+
+#peers {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+#data {
+  grid-column: 2;
+  grid-row: 2;
+  padding-top: 6em;
+  background-color: blue;
+}
+
+
 /**
 Common end
 */
