--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -34,6 +34,24 @@ main {
   grid-row: 1;
 }
 
+#self {
+  min-width: 20%;
+  width: 30%;
+  max-width: 40%;
+  margin-block: 0.5em;
+  margin-right: 0.5em;
+  border-radius: 1em 2em;
+}
+
+#peer {
+  min-width: 20%;
+  width: 30%;
+  max-width: 40%;
+  margin-block: 0.5em;
+  margin-right: 0.5em;
+  border-radius: 2em 1em;
+}
+
 #data {
   grid-column: 2;
   grid-row: 2;
