--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -30,12 +30,12 @@ main {
   grid-row: 1/2;
 }
 
-#peers {
+#userVideos {
   grid-column: 2;
   grid-row: 1;
 }
 
-#self {
+#selfVideo {
   min-width: 20%;
   width: 30%;
   max-width: 40%;
@@ -44,7 +44,7 @@ main {
   border-radius: 1em 2em;
 }
 
-#peer {
+#peerVideos {
   min-width: 20%;
   width: 30%;
   max-width: 40%;
