--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -33,23 +33,45 @@ main {
 #userVideos {
   grid-column: 2;
   grid-row: 1;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+#videoTitle {
+  position: absolute;
+  padding-bottom: 1em;
+}
+
+figure {
+  position: relative;
+}
+figcaption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+#self {
+  margin-block: 1em;
+  margin-top: 1.5em;
 }
 
 #selfVideo {
   min-width: 20%;
-  width: 30%;
-  max-width: 40%;
-  margin-block: 0.5em;
-  margin-right: 0.5em;
+  max-width: 100;
+  max-height: 35%;
   border-radius: 1em 2em;
+}
+
+#peers {
+  margin-block: 1em;
+  margin-top: 1.5em;
 }
 
 #peerVideos {
   min-width: 20%;
-  width: 30%;
-  max-width: 40%;
-  margin-block: 0.5em;
-  margin-right: 0.5em;
+  max-width: 100;
+  max-height: 35%;
   border-radius: 2em 1em;
 }
 
