Add CSS for open chat button

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -191,6 +191,16 @@ button.addvid {
  bottom: 8.5em;
 }
 
+#openchat {
+ color: black;
+ background-color: green;
+ border-radius: 5px;
+ border: 2px solid white;
+ float: right;
+ position: relative;
+ bottom: 8.5em;
+}
+
 #chat-log {
   padding-top: 10em;
 }
