Add negative margin to remove scroll

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -38,6 +38,7 @@ main {
   grid-row: 1;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  margin-bottom: -11em;
 }
 
 #videoTitle {
