Add positioning CSS for light and dark mode buttons

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -193,6 +193,12 @@ button.addvid {
  bottom: 8.5em;
 }
 
+#light, #dark {
+  float: right;
+  position: relative;
+  bottom: 8.5em;
+}
+
 #openchat {
  color: black;
  background-color: green;
