--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -202,6 +202,8 @@ button.addvid {
   float: right;
   position: relative;
   bottom: 8.5em;
+  background-color: black;
+  color: white;
 }
 
 #openchat {
