Add styles to header above videos

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -204,6 +204,11 @@ button.addvid {
   width: 120px;
 }
 
+#videoTitle {
+  font-weight: bold;
+  margin-top: 0.25em;
+}
+
 #chat-head {
   position: relative;
   padding-bottom: 5px;
