--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -42,6 +42,7 @@ main {
   row-gap: 1em;
   flex-direction: column;
   height: 93vh;
+  position: relative;
 }
 
 #userVideos {
@@ -364,6 +365,11 @@ header .welcome {
 #spacebar #toggle-video-sound {
   margin-left: 1em;
   color: blue;
+}
+
+.control-bubble {
+  position: absolute;
+  background-color: #fff;
 }
 
 /* Responsive Design */
