--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -368,8 +368,14 @@ header .welcome {
 }
 
 .control-bubble {
+  font-size: 24px;
+  top: 50px;
+  left: 20px;
+  padding: 10px;
   position: absolute;
-  background-color: #fff;
+  background-color: rgba(255, 255, 0, 0.8);
+  border-radius: 5px;
+  color: #555;
 }
 
 /* Responsive Design */
