--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -378,6 +378,17 @@ header .welcome {
   color: #555;
 }
 
+#copy-link {
+  position: relative;
+}
+
+.copied {
+  position: absolute;
+  border-radius: 5px;
+  background-color: rgba(55, 55, 55, 0.8);
+  color: orange;
+}
+
 /* Responsive Design */
 @media only screen and (min-width: 768px) {
   header a, header span  {
