--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -72,12 +72,13 @@ figcaption {
   text-align: center;
   display: inline-block;
   position: absolute;
-  margin-top: -2em;
+  margin-top: -2.5em;
   margin-left: 1em;
   color: white;
   background-color: black;
   padding: 0.5em 1em 0.2em 1em;
-  border-radius: 2em;
+  border: 0.12em outset black;
+  border-radius: 0.4em;
 }
 
 #selfVideo {
@@ -105,15 +106,23 @@ Common end
 David start
 */
 #home-page main{
-  background-color: #FAC898;
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: baseline;
   padding: 5em;
   margin-left: 20%;
   margin-right: 20%;
 }
-
+#home-page body {
+  background-image: url("../images/large.jpg");
+  background-size: 100%;
+  background-position-y: center;
+  image-rendering: crisp-edges;
+  image-rendering: -moz-crisp-edges;          /* Firefox */
+  image-rendering: -o-crisp-edges;            /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming)*/
+  -ms-interpolation-mode: nearest-neighbor;   /* IE (non-standard property) */
+}
 #ButtonOptions{
   display: flex;
   align-items: flex-end;
@@ -123,18 +132,20 @@ David start
 #CreateFormButton{
   margin-top: 1em;
   width: 9em;
+  padding: 0.2em;
   color: white;
   background-color: green;
 }
 #JoinFormButton{
   margin-top: 1em;
   width: 9em;
+  padding: 0.2em;
   color: white;
   background-color: green;
 }
 
 #JoinForm{
-  background-color: black;
+  background-color: rgba(0,0,0,.5);
   width: 20em;
   padding: 1em;
   margin-left: 5em;
@@ -144,19 +155,17 @@ David start
 }
 
 #JoinPopUp {
-  background-color: #FAC898;
   position: relative;
   margin-top: 9em;
 }
 
 #CreatePopUp {
-  background-color: #FAC898;
   position: relative;
   margin-top: 10em;
 }
 
 #CreateForm{
-  background-color: black;
+  background-color: rgba(0,0,0,.5);
   width: 20em;
   padding: 1em;
   text-align: center;
@@ -164,6 +173,14 @@ David start
   border: 4px solid white;
 }
 
+#CreateForm input{
+  margin-block: 0.3em;
+  padding: 0.3em;
+}
+#JoinForm input{
+  margin-block: 0.3em;
+  padding: 0.3em;
+}
 
 /**
 David end
